# curtainbe

./: .dockerignore  .gitignore  README.md  ansible.playbook.yml  captain-definition-backup  cron  django-q-captain-definition  docker-compose.public.yml  manage.py  pyproject.toml  requirements.google.txt  requirements.txt
.github/workflows/: main.yml
curtain/: admin.py  apps.py  authentication.py  chunked_upload.py  datacite_form.py  models.py  permissions.py  pydantic_models.py  serializers.py  storage.py  tests.py  throttling.py  utils.py  validations.py  view_sets.py  views.py  worker_tasks.py
curtain/management/commands/: delete_old_temp_cutain.py  get_stats.py  local_backup.py  migrate_old_curtain.py
curtain/migrations/: 0001_initial.py  0002_remove_curtain_md5_datahash_dataaesencryptionfactors.py  0003_remove_curtain_encrypted_with_and_more.py  0004_lastaccess.py  0005_curtain_permanent.py  0006_datacite.py  0007_datacite_contact_email_datacite_form_data_and_more.py  0008_remove_datacite_curtain_alter_datacite_status.py  0009_datacite_curtain.py  0010_alter_datacite_curtain.py  0011_datacite_lock.py  0012_alter_datacite_options.py  0013_add_datacite_local_file_storage.py  0014_add_curtain_expiry_duration.py  0015_curtainchunkedupload.py  0016_announcement.py  0017_permanentlinkrequest.py  0018_curtaincollection.py  0019_datacite_collection.py  0020_curtaincollection_enable.py  0021_add_name_field_to_curtain.py
curtainbe/: asgi.py  consumers.py  routing.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile  Dockerfile-backup  Dockerfile-djangorq  Dockerfile-nginx  Dockerfile-nginx-curtain-frontend  wait-for-services.sh
templates/admin/: dashboard.html  index.html  review_datacite.html
templates/admin/curtain/: batch_add_owner.html  batch_add_to_collection.html  clone_collection.html  duplicate_curtain.html  maintenance.html  manage_collection_curtains.html  multiple_ids_filter.html  purge_last_access.html
templates/admin/curtain/curtain/: change_list.html
templates/admin/curtain/curtaincollection/: change_form.html
templates/admin/curtain/lastaccess/: change_list.html
templates/admin/request/: purge_logs.html
templates/admin/request/request/: change_list.html
